--- a/styles/elegant_black/template/header.html
+++ b/styles/elegant_black/template/header.html
@@ -6,13 +6,13 @@
         <meta name="keywords" content="your,keywords,goes,here"/>
         <meta name="author" content="Your Name"/>
         <link rel="stylesheet" type="text/css" href="includes/style.css" media="all"/>
-        <title>EvoRayth &bull; {PAGE_TITLE}</title>
+        <title>{SITE_TITLE} &bull; {PAGE_TITLE}</title>
     </head>
     <body>
         <div id="wrap">
             <div id="header">
-                <h1><a href="#" title="Home">EvoRayth</a></h1>
-                <p>The Site Dedicated to Rayth's Evony stuff.</p>
+                <h1><a href="#" title="Home">{SITE_TITLE}</a></h1>
+                <p>{SITE_DESCRIPTION}</p>
             </div>
             <div id="nav">
                 <!-- INCLUDE nav.html -->
