--- a/styles/elegant_black/template/footer.html
+++ b/styles/elegant_black/template/footer.html
@@ -1,6 +1,7 @@
 </div>
 <div id="footer">
-                <p>&copy; EvoRayth.oo.gd 2015</p>
+                <p>&copy; {SITE_TITLE} {SITE_YEAR}</p>
+                <p>Template &copy; Ryan Morrison</p>
             </div>
         </div>
     </body>
