--- a/styles/elegant_black/template/nav.html
+++ b/styles/elegant_black/template/nav.html
@@ -1,5 +1,6 @@
 <ul>
     <li><a href="./index.php">Home</a></li>
-    <li><a href="./accstats.php">My Accounts</a></li>
-    <li><a href="https://github.com/Rayth/NeatScripts" target="_blank">NeatBot Scripts</a></li>
+    <!-- START .nav -->
+    <li><a href="{nav.URL}">{nav.TITLE}</a></li>
+    <!-- END .nav -->
 </ul>
