reorganised and tested
Tested template system and modified files accordingly.

--- a/styles/elegant_black/template/header.html
+++ b/styles/elegant_black/template/header.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Your description goes here"/>
         <meta name="keywords" content="your,keywords,goes,here"/>
         <meta name="author" content="Your Name"/>
-        <link rel="stylesheet" type="text/css" href="includes/style.css" media="all"/>
+        <link rel="stylesheet" type="text/css" href="styles/elegant_black/style.css" media="all"/>
         <title>{SITE_TITLE} &bull; {PAGE_TITLE}</title>
     </head>
     <body>
