--- a/styles/elegant_black/template/index/index.html
+++ b/styles/elegant_black/template/index/index.html
@@ -1,6 +1,6 @@
 <!-- INCLUDE header.html -->
 <div class="block">
     <h1>{PAGE_TITLE}</h1>
-    Site coming soon...
+    {INTRO_TEXT}
 </div>
 <!-- INCLUDE footer.html -->
