Main code update
Main coding mostly done. Still to add admin section and BBCode
implementation as well as user functions

--- a/styles/elegant_black/template/nav.html
+++ b/styles/elegant_black/template/nav.html
@@ -1,5 +1,5 @@
 <ul>
-    <li><a href="./index.php">Home</a></li>
-    
-  
+    <!-- BEGIN nav -->
+    <li><a href="./index.php?mode={nav.URL}">{nav.TITLE}</a></li>
+    <!-- END nav -->
 </ul>
