--- a/styles/elegant_black/template/sidebar.html
+++ b/styles/elegant_black/template/sidebar.html
@@ -1,12 +1,8 @@
 <div class="block">
-<h2>Some Title</h2>
+<h2>Links</h2>
 <p>
-    Morbi fermentum condimentum felis, commodo vestibulum sem mattis sed. Aliquam magna ante, mollis vitae tincidunt in, malesuada vitae turpis. Sed aliquam libero ut velit bibendum consectetur. Quisque sagittis, est in laoreet semper, enim dui consequat felis, faucibus ornare urna velit nec leo. Maecenas condimentum velit vitae est lobortis fermentum. In tristique sem vitae metus ornare luctus tempus nisl volutpat. Integer et est id nisi tempus pharetra sagittis et libero.
-</p>
-</div>
-<div class="block">
-<h2>Some Title 2</h2>
-<p>
-    Morbi fermentum condimentum felis, commodo vestibulum sem mattis sed. Aliquam magna ante, mollis vitae tincidunt in, malesuada vitae turpis. Sed aliquam libero ut velit bibendum consectetur. Quisque sagittis, est in laoreet semper, enim dui consequat felis, faucibus ornare urna velit nec leo. Maecenas condimentum velit vitae est lobortis fermentum. In tristique sem vitae metus ornare luctus tempus nisl volutpat. Integer et est id nisi tempus pharetra sagittis et libero.
+    - <a href="http://www.google.com" target="_blank">Google</a><br/>
+    - <a href="http://www.youtube.com" target="_blank">Youtube</a><br/>
+    - <a href="http://www.facebook.com" target="_blank">Facebook</a><br/>
 </p>
 </div>
