--- a/styles/elegant_black/template/nav.html
+++ b/styles/elegant_black/template/nav.html
@@ -1,5 +1,5 @@
 <ul>
     <!-- BEGIN nav -->
-    <li><a href="./index.php?mode={nav.URL}">{nav.TITLE}</a></li>
+    <li><a href="./{nav.URL}/">{nav.TITLE}</a></li>
     <!-- END nav -->
 </ul>
