--- a/styles/elegant_black/template/header.html
+++ b/styles/elegant_black/template/header.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-        <meta name="description" content="Your description goes here"/>
-        <meta name="keywords" content="your,keywords,goes,here"/>
-        <meta name="author" content="Your Name"/>
+        <meta name="description" content="{SITE_DESCRIPTION}"/>
+        <meta name="keywords" content="hypersite"/>
+        <meta name="author" content="Ryan Morrison"/>
         <base href="http://{SERVER_NAME}" />
         <link rel="stylesheet" type="text/css" href="./styles/{SITE_THEME}/style.css" media="all"/>
         <title>{SITE_TITLE} &bull; {PAGE_TITLE}</title>
