--- a/styles/elegant_black/template/home.html
+++ b/styles/elegant_black/template/home.html
@@ -1,10 +1,10 @@
 <!-- INCLUDE header.html -->
 <div class="block">
     <h1>Site Intro</h1>
-    <p>{INTRO_TEXT}</p>
+    {INTRO_TEXT}
 </div>
 <div class="block">
     <h1>{PAGE_TITLE}</h1>
-    <p>{PAGE_TEXT}</p>
+    {PAGE_TEXT}
 </div>
 <!-- INCLUDE footer.html -->
