--- a/styles/elegant_black/template/viewpage.html
+++ b/styles/elegant_black/template/viewpage.html
@@ -1,6 +1,6 @@
 <!-- INCLUDE header.html -->
 <div class="block">
     <h1>{PAGE_TITLE}</h1>
-    <p>{PAGE_TEXT}</p>
+    {PAGE_TEXT}
 </div>
 <!-- INCLUDE footer.html -->
