Updates to user system
class.user.php - using the hash function at all times now.
common.php - trynig to get cookie to work but hates me..
index.php - nothing major here...
admin_editpage.html - fixed minor display thing.
admin_message.html - only displaying backlink if user is admin
new template files
minor updates

--- a/styles/elegant_black/template/admin_message.html
+++ b/styles/elegant_black/template/admin_message.html
@@ -2,6 +2,6 @@
 <div class="block">
     <h1>Administrative Message</h1>
     <p>{MESSAGE}
-        <br/><br/><a href="./admin/">&Ll; Back to Admin CP</a></p>
+        <!-- IF USER_IS_ADMIN --><br/><br/><a href="./admin/">&Ll; Back to Admin CP</a><!-- ENDIF --></p>
 </div>
 <!-- INCLUDE footer.html -->
