--- a/styles/elegant_black/template/footer.html
+++ b/styles/elegant_black/template/footer.html
@@ -1,7 +1,7 @@
 </div>
 <div id="footer">
     <p>
-          <!-- IF USER_LOGGED_IN -->
+          <!-- IF USER_LOGGED_IN > 0 -->
           <a href="./user/logout/">Logout</a>
           <!-- ELSE -->
           <a href="./user/login/">Login</a> | <a href="./user/register/">Register</a>
