--- a/styles/elegant_black/template/admin_editpage.html
+++ b/styles/elegant_black/template/admin_editpage.html
@@ -17,7 +17,7 @@
         <dl>
             <dd><textarea id="textareas" name="page_text">{PAGE_TEXT}</textarea></dd>
         </dl>
-        <input type="submit" name="save" value="Submit"/>
+        <dl><dd><input type="submit" name="save" value="Submit"/></dd></dl>
     </form>
 </div>
 
