--- a/styles/elegant_black/template/sidebar.html
+++ b/styles/elegant_black/template/sidebar.html
@@ -3,7 +3,7 @@
 <h2>Sub-Pages</h2>
 <ul>
     <!-- BEGIN subpages -->
-    <li><a href="{subpages.LINK}">{subpages.TITLE}</a></li>
+    <li><a href="/{subpages.LINK}/">{subpages.TITLE}</a></li>
     <!-- END subpages -->
 </ul> 
 </div>
@@ -18,6 +18,8 @@
         <li><a href="./admin/users/">User Mangement</a></li>
         <li><a href="./admin/nav/">Navigation Management</a></li>
     </ul>
+</div>
+<div class="block">
     <h2>Modules</h2>
     
     <ul>
@@ -27,3 +29,10 @@
     </ul>
 </div>
 <!-- ENDIF -->
+<div class="block">
+    <h2>Other Links</h2>
+    <ul>
+        <li><a href="http://www.facebook.com/">Facebook</a></li>
+        <li><a href="http://www.google.com/">Google</a></li>
+    </ul>
+</div>
