--- a/styles/elegant_black/template/admin.html
+++ b/styles/elegant_black/template/admin.html
@@ -3,7 +3,7 @@
     <h1>{PAGE_TITLE}</h1>
     <p>Welcome to the Administrator Control Panel. Here you can modify your website by using the links on the left. Below is a list of pages on your site.</p>
 </div>
-<div class="rightbutton"><a class="mainaction" href="./admin/addpage/">Some Button</a></div>
+<div class="rightbutton"><a class="mainaction" href="./admin/addpage/">Add Page</a></div>
 <div class="block">
     <h1>All Pages</h1>
     <table width="100%" cellspacing="1" cellpadding="1">
