--- a/styles/elegant_black/template/sidebar.html
+++ b/styles/elegant_black/template/sidebar.html
@@ -32,7 +32,8 @@
 <div class="block">
     <h2>Other Links</h2>
     <ul>
-        <li><a href="http://www.facebook.com/">Facebook</a></li>
-        <li><a href="http://www.google.com/">Google</a></li>
+        <!-- BEGIN sbnav -->
+        <li><a href="{sbnav.URL}">{sbnav.TITLE}</a></li>
+        <!-- END sbnav -->
     </ul>
 </div>
