--- a/styles/elegant_black/template/user_login.html
+++ b/styles/elegant_black/template/user_login.html
@@ -14,7 +14,7 @@
         </dl>
         <dl>
             <dt><label for="password">Password:</label></dt>
-            <dd><input type="text" name="password" value=""/></dd>
+            <dd><input type="password" name="password" value=""/></dd>
         </dl>
         <dl><dd><input type="submit" name="login" value="Login"/></dd></dl>
     </form>
