--- a/styles/elegant_black/template/install/1.html
+++ b/styles/elegant_black/template/install/1.html
@@ -1,6 +1,7 @@
 <!-- INCLUDE header.html -->
 <div class="block">
     <h1>Yay!</h1>
-    <p>Database has been connected to and config file written. Click the continue button to go on!</p>
+    <p>Database connection successful. Click the continue button to go on!</p>
     <div class="rightbutton"><a class="mainaction" href="./install.php?stage=2">Continue</a></div>
+</div>
 </div>
