--- a/styles/elegant_black/template/admin/modules.html
+++ b/styles/elegant_black/template/admin/modules.html
@@ -14,7 +14,7 @@
             <td>{loaded.VERSION}</td>
             <td>{loaded.AUTHOR}</td>
             <td>{loaded.DESC}</td>
-            <td><a href="./admin/unloadmod/{loaded.NAME}/">Unload<a></td>
+            <td><a href="./admin/unloadmod/{loaded.FRIENDLY_URL}/">Unload<a></td>
         </tr>
         <!-- END loaded -->
     </table>
@@ -31,7 +31,7 @@
             <td>{unloaded.VERSION}</td>
             <td>{unloaded.AUTHOR}</td>
             <td>{unloaded.DESC}</td>
-            <td><a href="./admin/loadmod/{unloaded.NAME}/">Load<a></td>
+            <td><a href="./admin/loadmod/{unloaded.FRIENDLY_URL}/">Load<a></td>
         </tr>
         <!-- END unloaded -->
     </table>
