--- a/styles/elegant_black/template/sidebar.html
+++ b/styles/elegant_black/template/sidebar.html
@@ -13,6 +13,7 @@
     <h2>Admin Links</h2>
     <ul>
         <li><a href="./admin/">Admin Home</a></li>
+        <li><a href="./admin/settings/">Site Settings</a></li>
         <li><a href="./admin/pages/">Page Management</a></li>
         <li><a href="./admin/modules/">Module Management</a></li>
         <li><a href="./admin/users/">User Mangement</a></li>
