--- a/styles/elegant_black/template/sidebar.html
+++ b/styles/elegant_black/template/sidebar.html
@@ -18,6 +18,7 @@
         <li><a href="./admin/modules/">Module Management</a></li>
         <li><a href="./admin/users/">User Mangement</a></li>
         <li><a href="./admin/nav/">Navigation Management</a></li>
+        <li><a href="./admin/themes/">Theme List</a></li>
     </ul>
 </div>
 <div class="block">
