--- a/styles/elegant_black/template/sidebar.html
+++ b/styles/elegant_black/template/sidebar.html
@@ -31,6 +31,14 @@
     </ul>
 </div>
 <!-- ENDIF -->
+<!-- IF MODULE_SUBLINKS > 0 -->
+<div class="block">
+    <h2>Module Sub-Pages</h2>
+    <!-- BEGIN mod_subs -->
+    <li><a href="{mod_subs.URL}">{mod_subs.TITLE}</a></li>
+    <!-- END mod_subs -->
+</div>
+<!-- ENDIF -->
 <div class="block">
     <h2>Other Links</h2>
     <ul>
