Text editor change
Moved away from TinyMCE to CKEditor. Fixed all necessary template files.

--- a/styles/elegant_black/template/admin/editpage.html
+++ b/styles/elegant_black/template/admin/editpage.html
@@ -15,7 +15,8 @@
             <dd>{PARENT_SELECT}</dd>
         </dl>
         <dl>
-            <dd><textarea id="textareas" name="page_text">{PAGE_TEXT}</textarea></dd>
+            <dd><textarea name="page_text">{PAGE_TEXT}</textarea>
+            </dd>
         </dl>
         <dl><dd><input type="submit" name="save" value="Submit"/></dd></dl>
     </form>
