--- a/styles/elegant_black/template/admin/newpage.html
+++ b/styles/elegant_black/template/admin/newpage.html
@@ -15,7 +15,7 @@
             <dd>{PARENT_SELECT}</dd>
         </dl>
         <dl>
-            <dd><textarea id="textareas" name="page_text"></textarea></dd>
+            <dd><textarea name="page_text"></textarea></dd>
         </dl>
         <input type="submit" name="save" value="Submit"/>
     </form>
