--- a/styles/elegant_black/template/admin/settings.html
+++ b/styles/elegant_black/template/admin/settings.html
@@ -11,9 +11,7 @@
         <fieldset><label>Display Settings</label>
             <table width="100%">
                 <tr><td>Theme</td><td>{THEME_SELECT}</td></tr>
-                <tr><td>Use Tiny MCE</td><td><input type="radio" name="use_tiny_mce" value="0"/>No <input type="radio" name="use_tiny_mce" value="1"/>Yes</td></tr>
-                <tr><td>Tiny MCE Api</td><td><input type="text" name="tiny_mc_api" value="{TINY_MCE_API}"/></td></tr>
-                <tr><td>Site Intro</td><td><textarea id="textareas" name="site_intro">{SITE_INTRO}</textarea></td></tr>
+                <tr><td>Site Intro</td><td><textarea name="site_intro">{SITE_INTRO}</textarea></td></tr>
             </table>
         </fieldset>
         <fieldset><label>Other Settings</label>
