--- a/styles/elegant_black/template/admin/users.html
+++ b/styles/elegant_black/template/admin/users.html
@@ -4,6 +4,7 @@
     <h1>Message</h1><p>{MSG_TEXT}</p>
 </div>
 <!-- ENDIF -->
+<div class="rightbutton"><a class="mainaction" href="./admin/adduser/">Add User</a></div>
 <div class="block">
     <h1>{PAGE_TITLE}</h1>
     <p>Welcome to your user management</p>
