--- a/styles/elegant_black/template/admin/add-user.html
+++ b/styles/elegant_black/template/admin/add-user.html
@@ -4,7 +4,7 @@
     &nbsp;<b>User Information</b>
     <fieldset>
         <form action="./admin/add-user/" method="POST"/>
-        <b>Username:</b> <br/>
+        <b>Username:</b> <input type="text" name="username" value=""/> <br/>
         <b>New Password:</b> <input type="password" name="password" value=""/><br/>
         <b>Email:</b> <input type="text" name="user_email" value=""/><br/>
         <b>Level:</b> <select name="user_level"><option value="1">User</option><option value="2">Moderator</option><option value="3">Administrator</option></select><br/>
