--- a/styles/elegant_black/template/install/3.html
+++ b/styles/elegant_black/template/install/3.html
@@ -20,6 +20,7 @@
             <table width="100%">
                 <tr><td>Site Title</td><td><input type="text" name="site_title" value="HyperSite"/></td></tr>
                 <tr><td>Site Description</td><td><input type="text" name="site_desc" value="A CMS for Everyone" /></td></tr>
+                <tr><td>Site Email (Address all emails send from)</td></td><input type="text" name="site_email" value="some@email.com" /></td></tr>
                 <tr><td valign="top">Intro Text</td><td><textarea name="site_intro">Welcome to HyperSite</textarea></td></tr>
             </table>
         </fieldset>
