Minor template changes
-

--- a/styles/elegant_black/template/sidebar.html
+++ b/styles/elegant_black/template/sidebar.html
@@ -12,13 +12,25 @@
 <div class="block">
     <h2>Admin Links</h2>
     <ul>
-        <li><a href="./admin/">Admin Home</a></li>
-        <li><a href="./admin/settings/">Site Settings</a></li>
-        <li><a href="./admin/pages/">Page Management</a></li>
+        <li>Main Settings
+            <ul>
+                <li><a href="./admin/">Admin Home</a></li>
+                <li><a href="./admin/settings/">Site Settings</a></li>
+                <li><a href="./admin/themes/">Theme List</a></li>
+            </ul>
+        </li>
+        <li>Pages
+            <ul>
+                <li><a href="./admin/pages/">Page Management</a></li>
+            </ul>
+        </li>
+        <li>Users
+            <ul>
+                <li><a href="./admin/users/">User Mangement</a></li>
+            </ul>
+        </li>
         <li><a href="./admin/modules/">Module Management</a></li>
-        <li><a href="./admin/users/">User Mangement</a></li>
         <li><a href="./admin/nav/">Navigation Management</a></li>
-        <li><a href="./admin/themes/">Theme List</a></li>
     </ul>
 </div>
 <div class="block">
