--- a/styles/elegant_black/template/admin/settings.html
+++ b/styles/elegant_black/template/admin/settings.html
@@ -7,7 +7,7 @@
                 <tr><td>Site Title</td><td><input type="text" name="site_title" value="{TITLE}" /></td></tr>
                 <tr><td>Site Description</td><td><input type="text" name="site_desc" value="{DESC}" /></td></tr>
                 <tr><td>Allow Users to Login</td><td><input type="radio" name="allow_users_login" value="0" <!-- IF ALLOW_USERS_LOGIN EQUALS 0 -->checked="checked"<!-- ENDIF -->/>No <input type="radio" name="allow_users_login" value="1" <!-- IF ALLOW_USERS_LOGIN EQUALS 1 -->checked="checked"<!-- ENDIF -->/>Yes</td></tr>
-                
+                <tr><td>Allow Users to Login</td><td><input type="radio" name="allow_users_reg" value="0" <!-- IF ALLOW_USERS_REG EQUALS 0 -->checked="checked"<!-- ENDIF -->/>No <input type="radio" name="allow_users_reg" value="1" <!-- IF ALLOW_USERS_REG EQUALS 1 -->checked="checked"<!-- ENDIF -->/>Yes</td></tr>
             </table></fieldset>
         <fieldset><label>Display Settings</label>
             <table width="100%">
